# solar-us

./: .env.example  .gitignore  LICENSE  README.md  RUNBOOK.md  pyproject.toml
src/solar/: __init__.py  analyze.py  auth.py  cli.py  client.py  config.py  ingest.py  viz.py  weather.py
