[project]
name = "solar-us"
version = "0.1.0"
description = "Analyze and visualize home solar production from the Enphase Enlighten v4 API"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.2",
    "altair>=5.3",
    "python-dotenv>=1.0",
    "duckdb>=1.0",        # optional; used for fast local rollups over the parquet cache
]

[project.scripts]
solar-authorize = "solar.cli:authorize"
solar-fetch = "solar.cli:fetch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solar"]
